--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
                                 <!-- form -->
                                 <form action="#" class="search-box">
                                     <div class="input-form mb-30">
-                                        <input type="text" placeholder="When Would you like to go ?">
+                                        <input type="text" placeholder="Cuando te gustaría ir?">
                                     </div>
                                     <div class="select-form mb-30">
                                         <div class="select-itms">
                                             <select name="select" id="select1">
-                                                <option value="">When</option>
+                                                <option value="">Cuando</option>
                                                 <option value="">Services-1</option>
                                                 <option value="">Services-2</option>
                                                 <option value="">Services-3</option>
@@ -147,7 +147,7 @@
                                         </div>
                                     </div>
                                     <div class="search-form mb-30">
-                                        <a href="#">Search</a>
+                                        <a href="#">Buscar</a>
                                     </div>
                                 </form>
                             </div>
