--- a/index.html
+++ b/index.html
@@ -47,19 +47,18 @@
                             <div class="col-lg-8">
                                 <div class="header-info-left">
                                     <ul>
-                                        <li>needhelp@gotrip.com</li>
-                                        <li>666 569 025077</li>
-                                        <li>broklyn street new york</li>
+                                        <li>happytripcolombia@gmail.com</li>
+                                        <li>312 5550452</li>
+
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-4">
                                 <div class="header-info-right f-right">
                                     <ul class="header-social">
-                                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li> <a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                                        <li><a href="https://mobile.twitter.com/happytripc"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="https://www.facebook.com/happytripcol"><i class="fab fa-facebook-f"></i></a></li>
+                                        <li> <a href="https://instagram.com/happytripcol"><i class="fab fa-instagram"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -134,15 +133,17 @@
                                 <!-- form -->
                                 <form action="#" class="search-box">
                                     <div class="input-form mb-30">
-                                        <input type="text" placeholder="Cuando te gustaría ir?">
+                                        <input type="text" placeholder="Lugares a visitar">
                                     </div>
                                     <div class="select-form mb-30">
                                         <div class="select-itms">
                                             <select name="select" id="select1">
-                                                <option value="">Cuando</option>
-                                                <option value="">Services-1</option>
-                                                <option value="">Services-2</option>
-                                                <option value="">Services-3</option>
+                                                <option value="">Lugares</option>
+                                                <option value="">DESIERTO DE LA TATACOA</option>
+                                                <option value="">GUATAPE</option>
+                                                <option value="">RIO LA MIEL – CALDAS – EJE CAFETERO</option>
+                                                <option value="">VIAJES PASADIA - PARAMO EL TABLAZO</option>
+                                                
                                             </select>
                                         </div>
                                     </div>
@@ -167,7 +168,7 @@
                                 <span class="flaticon-tour"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>8000+ Our Local<br>Guides</h5>
+                                <h5>+200 Guías<br>Anfitriones Locales</h5>
                             </div>
                         </div>
                     </div>
@@ -177,7 +178,7 @@
                                 <span class="flaticon-pay"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>100% Trusted Tour<br>Agency</h5>
+                                <h5>Excelente Servicio<br>Viajes certificados</h5>
                             </div>
                         </div>
                     </div>
@@ -187,7 +188,7 @@
                                 <span class="flaticon-experience"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>28+ Years of Travel<br>Experience</h5>
+                                <h5>Turismo sostenible<br>Turismo Naranja</h5>
                             </div>
                         </div>
                     </div>
@@ -197,7 +198,7 @@
                                 <span class="flaticon-good"></span>
                             </div>
                             <div class="services-cap">
-                                <h5>98% Our Travelers<br>are Happy</h5>
+                                <h5>Confiabilidad + efectividad   <br>Viaje Feliz</h5>
                             </div>
                         </div>
                     </div>
@@ -225,14 +226,13 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
+                                    <h3><a href="#">Desierto de la Tatacoa</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>3 Dias</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Huila</li>
                                     </ul>
                                 </div>
                             </div>
@@ -245,14 +245,13 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
+                                    <h3><a href="#">Rio la Miel</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>3 Dias</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Eje Cafetero</li>
                                     </ul>
                                 </div>
                             </div>
@@ -265,14 +264,13 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
+                                    <h3><a href="#"> Guatapé y San Rafael</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>3 dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Antioquia</li>
                                     </ul>
                                 </div>
                             </div>
@@ -285,14 +283,13 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
+                                    <h3><a href="#">Tour de Luces Navideñas</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>2 Dias</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Boyaca</li>
                                     </ul>
                                 </div>
                             </div>
@@ -305,14 +302,13 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>5.0</span> </span>
+                                    <h3><a href="#">Caminata 4 Cascadas del Silencio </a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Cundinamarca</li>
                                     </ul>
                                 </div>
                             </div>
@@ -325,14 +321,14 @@
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0 Superb</span> </span>
-                                    <h3><a href="#">The Dark Forest Adventure</a></h3>
-                                    <p class="dolor">$1870 <span>/ Per Person</span></p>
+                                    <span><i class="fas fa-star"></i><span>5.0</span> </span>
+                                    <h3><a href="#">Caminata Paramo El Tablazo
+                                    </a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
-                                        <li><i class="far fa-clock"></i>3 Days</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Los Angeles</li>
+                                        <li><i class="far fa-clock"></i>1 Dia</li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Cundinamarca</li>
                                     </ul>
                                 </div>
                             </div>
@@ -377,29 +373,13 @@
                             <!-- Section Tittle -->
                             <div class="section-tittle section-tittle2">
                                 <span>Sobre nuestra compañía</span>
-                                <h2>Somos HappyTrip <br>Compañía de excursiones y tours ecológicos</h2>
+                                <h2>Somos HappyTrip <br>Agencia operadora de viajes
+                                    </h2>
                             </div>
                             <div class="support-caption">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                                <div class="select-suport-items">
-                                    <label class="single-items">Lorem ipsum dolor sit amet
-                                        <input type="checkbox" checked="checked active">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                    <label class="single-items">Consectetur adipisicing sed do
-                                        <input type="checkbox" checked="checked active">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                    <label class="single-items">Eiusmod tempor incididunt
-                                        <input type="checkbox" checked="checked active">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                    <label class="single-items">Ad minim veniam, quis nostrud.
-                                        <input type="checkbox" checked="checked active">
-                                        <span class="checkmark"></span>
-                                    </label>
-                                </div>
-                                <a href="#" class="btn border-btn">About us</a>
+                                <p>HappyTrip nace con el objetivo principal, de fomentar un turismo sostenible, solidario y consciente, usando el turismo como una herramienta para proteger nuestra biodiversidad, como un puente donde conectamos a viajeros con anfitriones de comunidades locales, destinos de naturaleza, y así ofrecer a nuestros viajeros las mejores experiencias de viaje.</p>
+                               
+                                <a href="#" class="btn border-btn">Nosotros</a>
                             </div>
                         </div>
                     </div>
@@ -420,7 +400,7 @@
                                 <div class="testimonial-caption ">
                                     <div class="testimonial-top-cap">
                                         <img src="assets/img/icon/testimonial.png" alt="">
-                                        <p>Logisti Group is a representative logistics operator providing full range of ser of customs clearance and transportation worl.</p>
+                                        <p>Representante logistica - HappyTrip nace con el objetivo principal, de fomentar un turismo sostenible, solidario y consciente, usando el turismo como una herramienta para proteger nuestra biodiversidad, como un puente donde conectamos a viajeros con anfitriones de comunidades locales, destinos de naturaleza, y así ofrecer a nuestros viajeros las mejores experiencias de viaje.</p>
                                     </div>
                                     <!-- founder -->
                                     <div class="testimonial-founder d-flex align-items-center justify-content-center">
@@ -428,7 +408,7 @@
                                             <img src="assets/img/testmonial/Homepage_testi.png" alt="">
                                         </div>
                                         <div class="founder-text">
-                                            <span>Jessya Inn</span>
+                                            <span>Camila Fonseca</span>
                                             <p>Co Founder</p>
                                         </div>
                                     </div>
