--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="col-lg-12">
                         <div class="section-tittle text-center">
                             <span>PAQUETES DE TOURS DESTACADOS</span>
-                            <h2>Lugares favoritos</h2>
+                            <h2 id="nombrePlaceholder">Lugares favoritos</h2>
                         </div>
                     </div>
                 </div>
@@ -616,7 +616,7 @@
     <script src="./assets/js/jquery.validate.min.js"></script>
     <script src="./assets/js/mail-script.js"></script>
     <script src="./assets/js/jquery.ajaxchimp.min.js"></script>
-
+    <script src="index.js"></script>
     <!-- Jquery Plugins, main Jquery -->
     <script src="./assets/js/plugins.js"></script>
     <script src="./assets/js/main.js"></script>
