--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>8.0</span> </span>
-                                    <h3><a id="nombrePlaceholder" href="#">Desierto de la Tatacoa</a></h3>
+                                    <h3><a id="nombrePlaceholder" href="./packages.html">Desierto de la Tatacoa</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -340,12 +340,12 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="assets/img/service/services2.jpg" alt="">
+                                <img src="assets/img/service/viaje3.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
-                                    <h3><a href="#">Rio la Miel</a></h3>
+                                    <span><i class="fas fa-star"></i><span>9.2</span> </span>
+                                    <h3><a href="./packages.html">norcasia, casas</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -359,12 +359,12 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="assets/img/service/services3.jpg" alt="">
+                                <img src="assets/img/service/viaje3.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
-                                    <h3><a href="#"> Guatapé y San Rafael</a></h3>
+                                    <span><i class="fas fa-star"></i><span>9.5</span> </span>
+                                    <h3><a href="./packages.html"> cañon del rio qeujar</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -378,12 +378,12 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="assets/img/service/services4.jpg" alt="">
+                                <img src="assets/img/service/viaje4.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>8.0</span> </span>
-                                    <h3><a href="#">Tour de Luces Navideñas</a></h3>
+                                    <span><i class="fas fa-star"></i><span>9.8</span> </span>
+                                    <h3><a href="./packages.html">gambita cesar</a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -397,12 +397,12 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="single-place mb-30">
                             <div class="place-img">
-                                <img src="assets/img/service/services5.jpg" alt="">
+                                <img src="assets/img/service/viaje5.png" alt="">
                             </div>
                             <div class="place-cap">
                                 <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>5.0</span> </span>
-                                    <h3><a href="#">Caminata 4 Cascadas del Silencio </a></h3>
+                                    <span><i class="fas fa-star"></i><span>9.6</span> </span>
+                                    <h3><a href="./packages.html">avistamiento de ballena </a></h3>
                                 </div>
                                 <div class="place-cap-bottom">
                                     <ul>
@@ -413,26 +413,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-place mb-30">
-                            <div class="place-img">
-                                <img src="assets/img/service/services6.jpg" alt="">
-                            </div>
-                            <div class="place-cap">
-                                <div class="place-cap-top">
-                                    <span><i class="fas fa-star"></i><span>5.0</span> </span>
-                                    <h3><a href="#">Caminata Paramo El Tablazo
-                                        </a></h3>
-                                </div>
-                                <div class="place-cap-bottom">
-                                    <ul>
-                                        <li><i class="far fa-clock"></i>1 Dia</li>
-                                        <li><i class="fas fa-map-marker-alt"></i>Cundinamarca</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+               
                 </div>
             </div>
         </div>
