--- a/contact.html
+++ b/contact.html
@@ -138,43 +138,7 @@
     <section class="contact-section">
             <div class="container">
                 <div class="d-none d-sm-block mb-5 pb-4">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32533583.87061043!2d-108.60522315049896!3d5.509765979867344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9a44775c7245%3A0xc39266cd95e133c2!2sVIVE%20HAPPY!5e0!3m2!1ses-419!2sco!4v1707350428275!5m2!1ses-419!2sco" width="1200" height="900" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <script>
-                        function initMap() {
-                            var uluru = {
-                                lat: -25.363,
-                                lng: 131.044
-                            };
-                            var grayStyles = [{
-                                    featureType: "all",
-                                    stylers: [{
-                                            saturation: -90
-                                        },
-                                        {
-                                            lightness: 50
-                                        }
-                                    ]
-                                },
-                                {
-                                    elementType: 'labels.text.fill',
-                                    stylers: [{
-                                        color: '#ccdee9'
-                                    }]
-                                }
-                            ];
-                            var map = new google.maps.Map(document.getElementById('map'), {
-                                center: {
-                                    lat: -31.197,
-                                    lng: 150.744
-                                },
-                                zoom: 9,
-                                styles: grayStyles,
-                                scrollwheel: false
-                            });
-                        }
-                    </script>
-                    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
-                    </script>
+                   <img src="https://scontent.feyp2-1.fna.fbcdn.net/v/t39.30808-6/425775504_786725610139917_2053426052497545546_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeHkHxqjqn6KVt0Jh9P9YuiKX8ksvkzNuHxfySy-TM24fOTAU4ArVV6myujTXtc_CxNzcArbmsqAgUR9-Yxef30o&_nc_ohc=KY94Z__H2FEAX9e8mlA&_nc_ht=scontent.feyp2-1.fna&oh=00_AfAjS-xnHknnsPoIlVjkUIAvvNbBJYVVxuiZ1OwHfeMfRg&oe=65CD571E" alt="">
                 </div>
     
                 <div class="row">
@@ -214,8 +178,8 @@
                         <div class="media contact-info">
                             <span class="contact-info__icon"><i class="ti-home"></i></span>
                             <div class="media-body">
-                                <h3>Bogota colombia.</h3>
-                                <p>Rosemead, CA 91770</p>
+                                <h3>Bogota, colombia</h3>
+                                <p></p>
                             </div>
                         </div>
                         <div class="media contact-info">
