ultimos cambios 12 am 13/02/2024

--- a/packages.html
+++ b/packages.html
@@ -511,7 +511,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>8.0</span> </span>
-                                    <h3><a href="https://wa.me/c/573144397756">murillo, tolima</a></h3>
+                                    <h3><a href="./viajes1.html">murillo, tolima</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
@@ -531,7 +531,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.2</span> </span>
-                                    <h3><a href="https://wa.me/c/573144397756">norcasia, casas</a></h3>
+                                    <h3><a href="./viajes2.html">norcasia, casas</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
@@ -551,7 +551,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.5</span> </span>
-                                    <h3><a href="https://wa.me/c/573144397756">cañon del rio quejar</a></h3>
+                                    <h3><a href="viajes3.html">cañon del rio quejar</a></h3>
                                     <p class="dolor">paquete incluido <span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
@@ -571,7 +571,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.8</span> </span>
-                                    <h3><a href="https://wa.me/c/573144397756">gambita, cesar</a></h3>
+                                    <h3><a href="viajes4.html">gambita, cesar</a></h3>
                                     <p class="dolor">paquete incluido<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
@@ -591,7 +591,7 @@
                             <div class="place-cap">
                                 <div class="place-cap-top">
                                     <span><i class="fas fa-star"></i><span>9.6</span> </span>
-                                    <h3><a href="https://wa.me/c/573144397756">avistamiendo de ballenas</a></h3>
+                                    <h3><a href="viajes5.html">avistamiendo de ballenas</a></h3>
                                     <p class="dolor">paquete incluido<span></span></p>
                                 </div>
                                 <div class="place-cap-bottom">
